--- a/views/about.jade
+++ b/views/about.jade
@@ -2,11 +2,93 @@ extend layout
 block content
     header
         div(class='header-text')
-            div(class='title').
-                R.E.S.P.E.C.T. ABOUT
+            div(class='title')
+                a(href='/').
+                    R.E.S.P.E.C.T.
             nav
                 ul
                     li
-                        a(href='')
-            //- div(class='subtitle').
-            //-     (Resnik Evaluation of Sanitation and Personal Exploitation of Communal Things)
+                        a(href='about', class='active').
+                            about
+                    li
+                        a(href='initiatives').
+                            initiatives
+                    li
+                        a(href='calendar').
+                            calendar
+                    li
+                        a(href='gallery').
+                            gallery
+                    li
+                        a(href='mailto:respectresnik@gmail.com').
+                            contact
+    div(class='main-content')
+        section(class='panel')
+            div(class='panel-section')
+                div(class='title') What is R.E.S.P.E.C.T.?
+                div(class='content')
+                    |R.E.S.P.E.C.T. is a backronym for Resnik Evaluation of Sanitation and Personal Exploitation of Communal Things. We are an organization dedicated to improving standards of shared public space in Resnik by organizing initiatives that evaluate and solve problems in the community.
+
+
+
+            div(class='panel-section')
+                div(class='title') Mission
+                div(class='content')
+                    | Our ultimate goal is to effect positive change in the Resnik dorm community in a proactive manner that involves and in fact necessitates participation from the residents themselves. In working towards this goal, we hope to:
+                    ul
+                        li.
+                            instill a more meaningful sense of community
+                        li.
+                            create a cleaner and healthier living environment
+                        li.
+                            heighten awareness of others in the community
+                        li.
+                            encourage personal accountability with regard to using communal areas and utilities
+                        li.
+                            foster a more respectful relationship between residents and janitorial staff
+
+                    | True to our namesake, we want to promote respect amongst the community and for Resnik itself.
+
+                    //- change behaviors
+
+                    //- encourage personal accountability and respect for communal areas.
+
+                    //- | foster a more respectful relationship between students and janitorial staff, conditions
+
+                    //-  True to our namesake, we want to foster a greater sense of respect for communal areas
+
+                    //- both amongst the community members and towards communal areas . In working towards this goal, we hope to:
+                    //- meaningful
+                    //-  to instill a
+
+                    //- sense of community
+
+                    //-  amongst Resnik residents and guests.
+                    //- instill attitudes
+                    //- change attitudes
+
+                    //- create a more conscientious living community in the Resnik dorm building. As A byproduct of this, we hope to transform the public living space in Resnik into a , a more respectful relationship with janitorial staff
+                    //- responsible
+
+                    //-  to heighten awareness and also change attitudes
+
+                    //- living environment
+
+                    //- considerate
+
+                    //-  clean, conscienliving community in R
+
+                    //- more conscientious living community amongst Resnik residents and guests.
+
+//-                       li.
+//-                             transform attitudes
+//-                     proactive
+//-                         proactivity
+
+//-                      change the Resnik dorm coumminity
+
+//- inspire
+//-                     ther Resnik community of both residents and guests
+
+//-                     create a cleaner and healthier living environment for Resnik residents and guests.
+
