--- a/views/index.jade
+++ b/views/index.jade
@@ -19,5 +19,15 @@ block content
                     li
                         a(href='gallery').
                             gallery
-            //- div(class='subtitle').
-            //-     (Resnik Evaluation of Sanitation and Personal Exploitation of Communal Things)
+                    li
+                        a(href='mailto:respectresnik@gmail.com').
+                            contact
+    div(class='main-content')
+        div(class='main-text').
+            NO
+        div(class='sub-text')
+            a(href='/initiatives#spring-cleaning')
+                [Operation: Spring Cleaning]
+        //- img(src='/images/stovetop.jpg')
+        //- div(class='subtitle').
+        //-     (Resnik Evaluation of Sanitation and Personal Exploitation of Communal Things)
