added dot before sub text, moved text down a little

--- a/views/index.jade
+++ b/views/index.jade
@@ -26,7 +26,7 @@ block content
         div(class='main-text').
             NO
         div(class='sub-text')
-            a(href='/initiatives#spring-cleaning')
+            a(href='/initiatives#spring-cleaning').
                 [Operation: Spring Cleaning]
         //- img(src='/images/stovetop.jpg')
         //- div(class='subtitle').
