--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,28 @@ html
         link(rel='stylesheet', href='/stylesheets/css/style.css')
         link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic')
     body(lang='en')
+        header
+            div(class='header-text')
+                div(class='title')
+                    a(href='/').
+                        R.E.S.P.E.C.T.
+                nav
+                    ul
+                        li
+                            a(href='about', class='#{about}').
+                                about
+                        li
+                            a(href='initiatives', class='#{initiatives}').
+                                initiatives
+                        li
+                            a(href='calendar', class='#{calendar}').
+                                calendar
+                        li
+                            a(href='gallery', class='#{gallery}').
+                                gallery
+                        li
+                            a(href='mailto:respect4resnik@gmail.com', class='#{contact}').
+                                contact
         block content
         script(type='text/javascript', src='//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js')
         script(type='text/javascript', src='/js/build/bundle.js')
