embedded google calendar

--- a/views/calendar.jade
+++ b/views/calendar.jade
@@ -1,5 +1,6 @@
 extend layout
 block content
     div(class='main-content')
-        div(class='main-text').
-            NO
+        section(class='panel')
+            div(class='panel-section')
+                iframe(class='calendar', src='https://www.google.com/calendar/embed?src=crsn021nfs1u5lc1ikutt5ieuk%40group.calendar.google.com&ctz=America/New_York', frameborder='0', scrolling='no')
