--- a/public/stylesheets/sass/_content.scss
+++ b/public/stylesheets/sass/_content.scss
@@ -125,3 +125,9 @@
     position: relative;
     letter-spacing: 1.5px;
 }
+
+.calendar {
+    width: 100%;
+    height: 600px;
+    border-width: 0;
+}
