changed padding values for ul

--- a/public/stylesheets/sass/_content.scss
+++ b/public/stylesheets/sass/_content.scss
@@ -233,7 +233,7 @@
 
         // text-align: justify;
         ul {
-            padding: 5px 50px;
+            padding: 0 50px 10px;
             list-style: disc;
             li {
 
