just arrow for back to top

--- a/views/gallery.jade
+++ b/views/gallery.jade
@@ -1,7 +1,7 @@
 extend layout
 block content
-    div(class='back-to-top hide')
-        ⇧ back to top
+    div(class='back-to-top hide').
+        ⇧
     div(class='main-content')
         div(class='gallery-preview hide closed')
             div(class='description')
